--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steam-api-wrapper",
+  "name": "@whitlocktech/steam-api-wrapper",
   "version": "1.0.0",
   "description": "This is a wrapper for the Steam API. The reason for it is to make it easily reusable and convinent.",
   "main": "index.js",
@@ -16,5 +16,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.6"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/whitlocktech/steam-api-wrapper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/whitlocktech/steam-api-wrapper/issues"
+  },
+  "homepage": "https://github.com/whitlocktech/steam-api-wrapper#readme"
 }
