--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "axios": "^1.3.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/whitlocktech/steam-api-wrapper.git"
