--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@whitlocktech/steam-api-wrapper",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "This is a wrapper for the Steam API. The reason for it is to make it easily reusable and convinent.",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,10 @@
   "dependencies": {
     "axios": "^1.3.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/whitlocktech/steam-api-wrapper.git"
